# netlogai-plugin-sdk

./: .gitignore  CMakeLists.txt  LICENSE  README.md  plugin_interface.hpp  plugin_manager.hpp
.github/workflows/: ci.yml
examples/performance/: performance_plugin.cpp  performance_plugin.hpp  plugin.json
examples/security/: plugin.json  security_plugin.cpp  security_plugin.hpp
examples/topology/: plugin.json  topology_plugin.cpp  topology_plugin.hpp
